# risk-shift-bench

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: adaptive_search_full.json  adaptive_search_smoke.json  benchmark_frontier.json  benchmark_frontier_audit.json  benchmark_frontier_blind_audit.json  benchmark_frontier_confirmation_audit.json  benchmark_frontier_confirmation_audit_v2.json  benchmark_frontier_confirmation_audit_v3.json  benchmark_frontier_dev.json  benchmark_frontier_final_audit.json  benchmark_frontier_holdout.json  benchmark_full.json  benchmark_smoke.json  external_confirmation_locked_design_v1.json  external_confirmation_protocol_v1.registered.json  external_confirmation_protocol_v1.registration-draft.json  external_confirmation_seed_validation_amendment_v1_1.json  external_confirmation_seed_validation_amendment_v1_1.registered.json  external_confirmation_seed_validation_amendment_v1_1.registration-draft.json  external_domain_extension_preregistration_draft_v1.json  frontier_confirmation_v3_protocol.json  frontier_extension_design_lock.json  frontier_pilot_verified_protocol.json  incumbent_switch_holdout_selected.json  incumbent_switch_multidelegate.json  incumbent_switch_refined.json  portfolio_audit.json  portfolio_confirmation.json  portfolio_dev.json  portfolio_full.json  portfolio_holdout.json
docs/: data_format.md  experiments.md  external_confirmation_amendment_v1_1.md  frontier_v2_research_program.md  methods.md  paper_reproduction.md  preregistration_external_domains_v1.md  reproduction.md
experiments/: ablation_study.py  (+84 more)
(+142 files in other folders)
