[project]
name = "risk-preference-inference"
version = "0.1.0"
description = "Research scaffold for learning personalized risk preferences from sequential Blackjack decisions."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
