[project]
name = "risk-shift-bench"
version = "0.1.0"
description = "Locked stress tests and robust fallback selection for risk-sensitive sequential decision making."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "numpy>=2,<3",
    "pytest>=8.4,<9",
]

[project.urls]
Repository = "https://github.com/dipeshbabu/risk-shift-bench"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
